--- a/04_spatial_in_R.html
+++ b/04_spatial_in_R.html
@@ -344,6 +344,7 @@ div.tocify {
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+<div class="logo"> </div>
 
 <div id="header">
 
