--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Adam Saddler, Amelia Bertozzi-Villa, Annie Browne, Jailos Lubinda, Justin Millar, Punam Amratia, Susan Rumisha, Tasmin Symons" />
 
 
-<title>Introduction to Spatial Analysis for Infectious Diseases</title>
+<title> Introduction to Spatial Analysis for Infectious Diseases</title>
 
 <script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -345,38 +344,30 @@ div.tocify {
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+<div class="logo"> </div>
 
 <div id="header">
 
 
 
-<h1 class="title toc-ignore">Introduction to Spatial Analysis for
-Infectious Diseases</h1>
-<h4 class="author">Adam Saddler, Amelia Bertozzi-Villa, Annie Browne,
-Jailos Lubinda, Justin Millar, Punam Amratia, Susan Rumisha, Tasmin
-Symons</h4>
+<h1 class="title toc-ignore"><p><img src="map-logo-col.png"
+style="display: block; margin:0 auto;" width="300" /><br />
+Introduction to Spatial Analysis for Infectious Diseases</p></h1>
 
 </div>
 
 
 <hr />
-<p>
-</p>
-<div style="text-align: center; margin-top: 30px; margin-bottom: 30px;">
-<p><img src="images/map-logo_col.png" /></p>
-</div>
-<p>
-</p>
 <p>Welcome to the Introduction of Spatial Analysis for Infectious
 diseases tutorial pages. In this part of the workshop we aim to teach
 basic concepts, skills and tools for working with data so that you can
-get more done n less time, and with less pain. The lessons here focus
+get more done in less time, and with less pain. The lessons here focus
 mainly on the use of R and QGIS.</p>
 <p>The main sections of this workshop are designed to be introductory
 for participants with little to no programming experience. The advanced
 section taught in R for Geostatistical Modelling using
 <code>R-INLA</code> requires participants to have some statistical
-knowledge, some understanding of bayesian statistics and some prior
+knowledge, some understanding of Bayesian statistics and some prior
 knowledge of spatial data.</p>
 <hr />
 <p><strong>Goal of this tutorial:</strong></p>
@@ -384,28 +375,36 @@ knowledge of spatial data.</p>
 day-to-day data activities. Given the restricted time of ASTMH, we may
 not be able to cover all important aspects of data handling. But the
 team are excited to release future workshops more tailored to
-regional/country requests. Please get in touch with us at <strong>INSERT
-EMAIL</strong></p>
+regional/country requests. Please get in touch with us at on our <a
+href="https://groups.google.com/g/malaria-atlas-project-introduction-to-spatial-analysis">GoogleGroup</a></p>
 <hr />
 <p><br></p>
 <div id="preparations" class="section level2">
 <h2>Preparations</h2>
 <p>This workshops is expected to be hands-on, and to follow this lessons
 participants must have R, RStudio and QGIS installed on their computers.
-They also need to be able to install a number of R packages, create
+You also need to be able to install a number of R packages, create
 directories and download files.</p>
 <p>To avoid troubleshooting during the lesson, participants should
-follow the instruction below to download and install everything
-beforehand. If they are using their own computers this should be no
-problem, but if the computer is managed by their organization’s IT
-department they might need help from an IT administrator.</p>
+follow the instructions below to download and install everything
+beforehand. If you are using your own computers this should be no
+problem, but if the computer is managed by your organization’s IT
+department you might need help from an IT administrator.</p>
 <p><br></p>
-<div id="install-qgis" class="section level3">
-<h3>Install QGIS</h3>
+<div id="installing-qgis" class="section level3">
+<h3>Installing QGIS</h3>
 <p>Follow the <a
 href="https://www.qgis.org/en/site/forusers/download.html">QGIS</a>
 download for the appropriate operating system to download on your
 computer.</p>
+<ol style="list-style-type: decimal">
+<li>Scroll down and click on “QGIS Standalone Installer Version 3.26” to
+download the installer package: this is recommended for new users</li>
+<li>Save the window installer package in you desired location, usually
+on the C drive (“C:/Program Files/QGIS 3.26.2/”)</li>
+<li>Double click the installer and follow the prompts to install
+QGIS</li>
+</ol>
 <p><br></p>
 </div>
 <div id="install-r-and-rstudio" class="section level3">
@@ -566,7 +565,11 @@ outside of the scope of this lesson.</p>
 </div>
 <div id="download-the-data" class="section level3">
 <h3>Download the data</h3>
-<p>All data for this workshop will be found on your USB sticks</p>
+<p>All data for this workshop will be available on a USB stick provided
+in attendance. The data can also be found in advance of the training in
+a <a
+href="https://drive.google.com/drive/folders/16KTr5tKvE73GibDDWxWa1RuOAJRF7ZPS?usp=sharing">GoogleDrive</a>
+folder.</p>
 </div>
 </div>
 
